[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worldtime-mcp-server"
version = "0.1.0"
description = "MCP server that exposes a WorldTimeAPI timezone tool."
authors = [{ name = "Automation" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.27",
]

[project.scripts]
worldtime-mcp-server = "worldtime_server:main"
